--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ description: >- # used by seo meta and the atom feed
   
 
 # fill in the protocol & hostname for your site, e.g., 'https://username.github.io'
-url: "https://codewithkrish02.github.io/pages/"
+url: "https://codewithkrish02.github.io/"
 
 github:
   username: codewithKrish02 # change to your github username
