--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ timezone: America/Chicago
 
 title: CodeWithKrish # the main title
 
-tagline: Passionate Software Developer # it will display as the sub-title
+tagline: Passionate Software Developer from India # it will display as the sub-title
 
 description: >- # used by seo meta and the atom feed
   
